--- a/stylesheets/partials/_slider.scss
+++ b/stylesheets/partials/_slider.scss
@@ -15,6 +15,7 @@
 
 .controls {
   display: flex;
+  opacity: 1;
     justify-content: center;
     flex-direction: row;
     flex-wrap: nowrap;
@@ -22,6 +23,9 @@
       height: 30px;
       width: 30px;
       margin: 1em;
+      &:hover {
+        opacity: 0.8;
+      }
     }
 }
 
